--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -5,7 +5,11 @@
     "es6": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:prettier/recommended", "google"],
+  "extends": [
+    //"eslint:recommended",
+    "plugin:prettier/recommended",
+    "google"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2020,
