--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.3",
+    "mysql": "^2.18.1",
     "prettier": "^2.5.1"
   },
   "devDependencies": {
