--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -2,13 +2,12 @@
   "env": {
     "node": true,
     "commonjs": true,
-    "es6": true,
     "es2021": true
   },
   "extends": [
-    //        "eslint:recommended",
-    "plugin:prettier/recommended",
-    "google"
+            "eslint:recommended",
+    "plugin:prettier/recommended"
+//    "google"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
