--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.3",
+    "express-mysql-session": "^2.1.7",
+    "express-session": "^1.17.2",
     "mysql": "^2.18.1",
     "prettier": "^2.5.1"
   },
