--- a/app/package.json
+++ b/app/package.json
@@ -9,16 +9,18 @@
     "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
-    "prettier": "^2.5.1"
+    "winston": "^3.6.0",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "prettier": "^2.5.1"
   },
-  "name": "login-page",
+  "name": "dondok-sales-management",
   "version": "1.0.0",
   "main": "app.js",
   "bin": {
